crates/oxc_css/tests/error/scss/at-rule/use/empty.snap
---
source: crates/oxc_css/tests/error.rs
---
error: string is expected
  ┌─ empty.scss:1:5
  │
1 │ @use;
  │     ^


